--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,18 @@
     <title>Twitter Video Downloader</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+
+    <div class="container">
+        <h1>TVIDownloader</h1>
+        
+        <!-- method="POST" action="/send-link"  -->
+        <form id="submit-form"> 
+            <input type="search" placeholder="Tweet's link..." id="get-link" class="search-link" name="link">
+        </form>
+        
+        <div class="result">
+
+        </div>
+    </div>
 </body>
 </html>
